--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -192,6 +192,12 @@
     <Compile Include="Configuration\DBOptionCheckBox.cs">
       <SubType>Component</SubType>
     </Compile>
+	 <Compile Include="Configuration\MemoryBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\MemoryBox.designer.cs">
+      <DependentUpon>MemoryBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="DB Classes\DBFanart.cs" />
     <Compile Include="DB Classes\DBFormatting.cs" />
     <Compile Include="DB Classes\DBNewzbin.cs" />
@@ -320,6 +326,9 @@
     <EmbeddedResource Include="Local Parsing Classes\ManualParseDialog.resx">
       <SubType>Designer</SubType>
       <DependentUpon>ManualParseDialog.cs</DependentUpon>
+    </EmbeddedResource>
+	<EmbeddedResource Include="Configuration\MemoryBox.resx">
+      <DependentUpon>MemoryBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Online Parsing Classes\APIKey.resx">
       <Generator>ResXFileCodeGenerator</Generator>
