--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{A983AA7A-DE3C-4587-9416-22373A35B721}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -130,6 +130,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cache.cs" />
+    <Compile Include="Configuration\PinCode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\PinCode.Designer.cs">
+      <DependentUpon>PinCode.cs</DependentUpon>
+    </Compile>
     <Compile Include="SkinSettings.cs" />
     <Compile Include="Configuration\About.cs">
       <SubType>UserControl</SubType>
@@ -336,6 +342,9 @@
     <EmbeddedResource Include="Configuration\ManualEpisodeManagementPane.resx">
       <SubType>Designer</SubType>
       <DependentUpon>ManualEpisodeManagementPane.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\PinCode.resx">
+      <DependentUpon>PinCode.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Local Parsing Classes\ManualParseDialog.resx">
       <SubType>Designer</SubType>
