--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -130,6 +130,12 @@
   </ItemGroup>
   <ItemGroup>	
     <Compile Include="cache.cs" />
+	<Compile Include="Configuration\ViewTemplates.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\ViewTemplates.Designer.cs">
+      <DependentUpon>ViewTemplates.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration\PinCode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -361,6 +367,9 @@
     <EmbeddedResource Include="Configuration\ViewsConfiguration.resx">
       <DependentUpon>ViewsConfiguration.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+	<EmbeddedResource Include="Configuration\ViewTemplates.resx">
+      <DependentUpon>ViewTemplates.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Online Parsing Classes\APIKey.resx">
       <Generator>ResXFileCodeGenerator</Generator>
