--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -202,20 +202,8 @@
     <Compile Include="Configuration\logoTemplate.Designer.cs">
       <DependentUpon>logoTemplate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Configuration\ManualEpisodeManagementPane.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Configuration\ManualEpisodeManagementPane.Designer.cs">
-      <DependentUpon>ManualEpisodeManagementPane.cs</DependentUpon>
-    </Compile>
     <Compile Include="Configuration\DBOptionCheckBox.cs">
       <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Configuration\MemoryBox.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Configuration\MemoryBox.designer.cs">
-      <DependentUpon>MemoryBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Configuration\AddImportPathPopup.cs">
       <SubType>Form</SubType>
@@ -252,12 +240,6 @@
     <Compile Include="Helper.cs" />
     <Compile Include="imageAllocator.cs" />
     <Compile Include="Local Parsing Classes\LocalParse.cs" />
-    <Compile Include="Local Parsing Classes\ManualParseDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Local Parsing Classes\ManualParseDialog.Designer.cs">
-      <DependentUpon>ManualParseDialog.cs</DependentUpon>
-    </Compile>
     <Compile Include="Local Parsing Classes\Watcher.cs" />
     <Compile Include="localLogos.cs" />
     <Compile Include="LogWriter.cs" />
@@ -351,8 +333,11 @@
     <EmbeddedResource Include="Configuration\ImportPanelSeriesID.resx">
       <DependentUpon>ImportPanelSeriesID.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Configuration\ImportProgessPage.resx">
-      <DependentUpon>ImportProgessPage.cs</DependentUpon>
+    <EmbeddedResource Include="Configuration\ImportWizard.resx">
+      <DependentUpon>ImportWizard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\ImportPanelProgress.resx">
+      <DependentUpon>ImportPanelProgress.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Configuration\loadingDisplay.resx">
       <DependentUpon>loadingDisplay.cs</DependentUpon>
@@ -370,24 +355,12 @@
       <SubType>Designer</SubType>
       <DependentUpon>logoTemplate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Configuration\ManualEpisodeManagementPane.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>ManualEpisodeManagementPane.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Configuration\PinCode.resx">
       <DependentUpon>PinCode.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Configuration\ProgressLabel.resx">
       <DependentUpon>ProgressLabel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Local Parsing Classes\ManualParseDialog.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>ManualParseDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Configuration\MemoryBox.resx">
-      <DependentUpon>MemoryBox.cs</DependentUpon>
-      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Configuration\AddImportPathPopup.resx">
       <DependentUpon>AddImportPathPopup.cs</DependentUpon>
@@ -472,11 +445,17 @@
     <Compile Include="Configuration\ImportPanelSeriesID.Designer.cs">
       <DependentUpon>ImportPanelSeriesID.cs</DependentUpon>
     </Compile>
-    <Compile Include="Configuration\ImportProgessPage.cs">
+    <Compile Include="Configuration\ImportWizard.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Configuration\ImportProgessPage.Designer.cs">
-      <DependentUpon>ImportProgessPage.cs</DependentUpon>
+    <Compile Include="Configuration\ImportWizard.Designer.cs">
+      <DependentUpon>ImportWizard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\ImportPanelProgress.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Configuration\ImportPanelProgress.Designer.cs">
+      <DependentUpon>ImportPanelProgress.cs</DependentUpon>
     </Compile>
     <Compile Include="Configuration\ProgressLabel.cs">
       <SubType>UserControl</SubType>
